[gd_scene load_steps=28 format=3 uid="uid://c3cf160taxu74"]

[ext_resource type="PackedScene" uid="uid://duwl5sldekn2r" path="res://scenes/Enemy.tscn" id="1_gxwpd"]
[ext_resource type="Script" path="res://scripts/broodMother.gd" id="2_4eayv"]
[ext_resource type="Texture2D" uid="uid://c10raru0e21hn" path="res://art/enemy/brood_mother.png" id="2_mp4tl"]
[ext_resource type="Texture2D" uid="uid://dkaurqtxoubpw" path="res://art/enemy/brood_mother_n.png" id="3_46u5r"]
[ext_resource type="PackedScene" uid="uid://bvxg5kctr4jyl" path="res://scenes/StateMachine.tscn" id="5_ilnps"]
[ext_resource type="Script" path="res://scripts/State/bMIdle.gd" id="6_dg2d0"]
[ext_resource type="Script" path="res://scripts/State/bMFollow.gd" id="7_gv6h6"]
[ext_resource type="Script" path="res://scripts/State/bMAttack.gd" id="8_ov423"]
[ext_resource type="Script" path="res://scripts/State/bMRetreat.gd" id="9_e1q7n"]
[ext_resource type="Script" path="res://scripts/State/bMSpit.gd" id="10_oci4w"]
[ext_resource type="PackedScene" uid="uid://cb3n68rjgonos" path="res://scenes/Danger.tscn" id="11_6php0"]
[ext_resource type="Script" path="res://scripts/State/bMLay.gd" id="11_c0nc6"]
[ext_resource type="Script" path="res://scripts/State/bMDead.gd" id="12_ft6f4"]
[ext_resource type="PackedScene" uid="uid://ch0016cku2p02" path="res://scenes/Light.tscn" id="13_l45jj"]
[ext_resource type="Texture2D" uid="uid://gwwee2m4yfsh" path="res://art/environment/lights/wall light2_green.png" id="14_x8nij"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ss482"]
radius = 29.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_glneo"]
radius = 9.0
height = 36.0

[sub_resource type="CanvasTexture" id="CanvasTexture_ueow1"]
diffuse_texture = ExtResource("2_mp4tl")
normal_texture = ExtResource("3_46u5r")

[sub_resource type="Animation" id="Animation_pj1hk"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 9, 10, 11, 12, 13, 14, 15, 12, 11, 10, 9, 0]
}

[sub_resource type="Animation" id="Animation_3j8ah"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_q2p1w"]
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 7, 16, 17, 18, 17, 19]
}

[sub_resource type="Animation" id="Animation_f7xlt"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_rex3f"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}

[sub_resource type="Animation" id="Animation_fp70i"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_3yf0q"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pu0ny"]
_data = {
"Birthing": SubResource("Animation_pj1hk"),
"Death": SubResource("Animation_3j8ah"),
"Death Lunge": SubResource("Animation_q2p1w"),
"Fly": SubResource("Animation_f7xlt"),
"Lay": SubResource("Animation_rex3f"),
"Skitter": SubResource("Animation_fp70i"),
"Spit": SubResource("Animation_3yf0q")
}

[sub_resource type="LabelSettings" id="LabelSettings_ky1wo"]
font_size = 6

[node name="BroodMother" groups=["Enemy"] instance=ExtResource("1_gxwpd")]
script = ExtResource("2_4eayv")
default_speed = 20
lunge_speed = 300
attack_range = 250

[node name="SpitSpawn" type="Marker2D" parent="." index="0"]
position = Vector2(26, 0)

[node name="Hitbox" parent="." index="3"]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="1"]
visible = true
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ss482")

[node name="Health" parent="." index="4"]
max_health = 5

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2(-4, 0)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_glneo")

[node name="LineOfSight" parent="." index="6"]
visible = false

[node name="Sprite2D" parent="." index="9"]
texture_filter = 1
texture = SubResource("CanvasTexture_ueow1")
hframes = 5
vframes = 5
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": true,
"layer": "",
"o_ex_p": "",
"o_folder": "res://art/enemy/",
"o_name": "brood_mother_n",
"only_visible": true,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://art/enemy/brood_mother.aseprite"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="10"]
libraries = {
"": SubResource("AnimationLibrary_pu0ny")
}

[node name="StateMachine" parent="." index="11" node_paths=PackedStringArray("initial_state") instance=ExtResource("5_ilnps")]
initial_state = NodePath("BMIdle")

[node name="BMIdle" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_dg2d0")
enemy = NodePath("../..")

[node name="BMFollow" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_gv6h6")
enemy = NodePath("../..")

[node name="BMLunge" type="Node" parent="StateMachine" index="2" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_ov423")
enemy = NodePath("../..")

[node name="BMRetreat" type="Node" parent="StateMachine" index="3" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_e1q7n")
enemy = NodePath("../..")

[node name="BMSpit" type="Node" parent="StateMachine" index="4" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_oci4w")
enemy = NodePath("../..")

[node name="BMLay" type="Node" parent="StateMachine" index="5" node_paths=PackedStringArray("enemy")]
script = ExtResource("11_c0nc6")
enemy = NodePath("../..")

[node name="BMDead" type="Node" parent="StateMachine" index="6" node_paths=PackedStringArray("enemy")]
script = ExtResource("12_ft6f4")
enemy = NodePath("../..")

[node name="Danger" parent="." index="12" instance=ExtResource("11_6php0")]

[node name="N" parent="Danger" index="0"]
target_position = Vector2(0, 35)

[node name="NE" parent="Danger" index="1"]
target_position = Vector2(0, 40)

[node name="E" parent="Danger" index="2"]
target_position = Vector2(0, 45)

[node name="SE" parent="Danger" index="3"]
target_position = Vector2(0, 40)

[node name="S" parent="Danger" index="4"]
target_position = Vector2(0, 35)

[node name="SW" parent="Danger" index="5"]
target_position = Vector2(0, 40)

[node name="W" parent="Danger" index="6"]
target_position = Vector2(0, 45)

[node name="NW" parent="Danger" index="7"]
target_position = Vector2(0, 40)

[node name="CanvasLayer" type="CanvasLayer" parent="." index="13"]

[node name="Label" type="Label" parent="CanvasLayer" index="0"]
offset_left = 5.0
offset_top = 22.0
offset_right = 66.0
offset_bottom = 45.0
text = "sdfsdfw"
label_settings = SubResource("LabelSettings_ky1wo")

[node name="Light" parent="." index="14" instance=ExtResource("13_l45jj")]
texture = null
light_texture = ExtResource("14_x8nij")
flicker_factor = 1.0
energy_factor = 5.0
light_offset = 0

[editable path="Danger"]
